--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "SPA",
+	"name": "backbone-viewport",
 	"title": "Single page application framework",
-	"description": "Tiny single page application framework",
+	"description": "Tiny single page application framework built on Backbone",
 	"homepage": "https://github.com/dzhdmitry/spa",
-	"version": "0.4.5",
+	"version": "0.5.0",
 	"author": {
 		"name": "Dmitry Dzhuleba",
 		"email": "dzhdmitry@gmail.com"
