--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.5.0",
   "author": {
     "name": "Dmitry Dzhuleba",
-    "email": "dzhdmitry@gmail.com"
+    "email": "dmitry.dzhuleba@gmail.com"
   },
   "scripts": {
     "test": "grunt qunit"
